# teaching_imn359

./: .gitignore  README.md  demo_TF.py  pyproject.toml  requirements.txt
Demo01_python/: demo01.py  mes_fonctions.py
Demo02_python/: demo02.py
Demo03_python/: demo03.py
Demo04_python/: demo04.py
Demo05_python/: demo05_tfd_fft.py  piece_regular.mat
Demo06_python/: cameraman.npy  demo06.py  demo06.py~  mandrill.mat  mandrill.npy  snr.py  snr.py~
Demo07_python/: demo07.py
Demo08_python/: .Rhistory  dct.py  dct2.py  demo08.py  demo08.py~  idct.py  idct2.py  lena.mat  locDCT_demo.py  piece-regular.mat  snr.py  text
Demo09_python/: Demo09.py  bird.mat
Demo10_python/: Demo10.py  cameraman.mat
Demo11_python/: computeHaar1D.py  computeHaar1DReconstruction.py  demo11.py
Demo12_python/: cconv.py  demo12_approximations.py  demo12_ondelettes1D.py  fwt.py  general.py  ifwt.py
Demo_Convolution/: demoConvolution.py  piece-regular.npy  utils.py
Demo_python/: demo01.py  demo02.py  demo04.py  demo05.py  demo05_tfd_fft.py  demo06.py  demo07.py  demo08.py  demo09.py  demo10.py  demo11.py  demo12_ondelettes1D.py  demoConvolution.py
Intro_Latex/: 1 - Preambule.tex  2- StructureDocument.tex  3- StyleDeTexte.tex  4- Mathematiques.tex  5- ImagesEtReferences.tex
Intro_python/: 1-Variables.py  2-Operateurs.py  3-Indexage.py  4-Graphes.py  4-Graphiques.py  5-ProgrammationFonctions.py  6-OptimisationCode.py  HelloWorldFunction.py  ReturnFordyTou.py  lena.mat  lena.npy
Labo_FFT/: demoCos2D.py  demoCosinus.py
fonctions/: fwt.py  intro.py  io.py  ondelette.py
(+36 files in other folders)
