[build-system]
requires = ["setuptools >= 77.0.3"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
packages = ["fonctions"]

[tool.setuptools.package-data]
"fonctions.my_data" = ['data/*']

[project]
name = "demo"
version = "0.1"
dependencies = [
    "numpy",
    "matplotlib",
    "scipy",
    "sounddevice"
]
